# electron_ffmpeg_addon_camera

./: .gitignore  README.md  binding.gyp
src/: CMakeLists.txt  main.cpp  resources.qrc  video.cpp  video.h  video_source.cpp  video_source.h  video_state.h  video_stats.h  webcam_api.cpp  webcam_api.h
